--- a/style.css
+++ b/style.css
@@ -7,23 +7,29 @@
 .container {
   height: 100vh;
   width: 100%;
-  font-family: sans-serif;
-  /* background-color: rgb(192, 38, 102); */
-  color: azure;
-  padding-bottom: 100px;
   background-image: linear-gradient(
     to right,
     rgb(155, 27, 102),
     rgb(214, 130, 172)
   );
-  /* position: relative; */
+  font-family: sans-serif;
+  color: azure;
+  padding-bottom: 100px;
+}
+
+.app {
+  opacity: 0;
+  transition: all 0.5s;
 }
 
 .blur {
   filter: brightness(20%);
-  backdrop-filter: black;
+  /* backdrop-filter: black; */
   /* filter: blur(5px); */
-  transition: all 2s;
+  /* background-color: rgba(255, 255, 255, 0.4); */
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  transition: all 0.5s;
 }
 
 .name {
@@ -43,6 +49,7 @@
   width: 350px;
   font-size: 60px;
   border: solid black;
+  border-radius: 50px;
   padding: 10px;
   background-color: rgb(13, 66, 66);
   font-style: italic;
@@ -66,6 +73,7 @@
   font-size: 30px;
   border: 10px solid white;
   border-radius: 10px;
+  font-style: italic;
 }
 
 .timer {
@@ -86,7 +94,7 @@
   border: 10px solid white;
   background-image: linear-gradient(
     to right,
-    rgb(148, 139, 11),
+    rgb(11, 143, 148),
     rgb(41, 32, 117)
   );
   border-radius: 50%;
@@ -101,7 +109,7 @@
 
 .answer:hover {
   transform: translateY(-8px);
-  background:rgb(39, 141, 14) ;
+  background: rgb(39, 141, 14);
   /* color: aqua; */
   transition: transform 0.5s;
 }
@@ -110,36 +118,115 @@
   text-align: center;
   display: flex;
   margin: auto;
-  margin-top: 40px;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(to right, rgb(184, 94, 42), rgb(80, 83, 129));
+  background-image: linear-gradient(
+    to bottom,
+    rgb(42, 92, 184),
+    rgb(131, 148, 34)
+  );
   width: 30%;
   font-size: 30px;
   color: rgb(255, 255, 255);
-  padding: 30px;
-  /* z-index: 10; */
-  /* position: absolute; */
-  opacity: 0;
-  transition: all 1s;
-  border-radius: 10px;
+  padding: 25px;
+  transform: translateY(-110%);
+  /* opacity: 0; */
+  visibility: hidden;
+  transition: opacity 0.5s;
+  border-radius: 40px;
 }
 
 .correct {
-  color: rgb(114, 241, 114);
+  color: rgb(19, 228, 19);
 }
 
 .percentage {
-  color: rgb(241, 87, 208);
+  color: rgb(109, 8, 8);
 }
 
-.restart {
-  /* display: block; */
-  /* height: 30px; */
-  background-color: antiquewhite;
+.restart,
+.start {
+  background-color: rgb(245, 204, 150);
+  padding: 15px 15px 15px 20px;
+  font-size: 25px;
+  margin: 20px auto;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+}
+
+.restart:hover,
+.start:hover {
+  transform: translateY(-2px);
+  background-color: rgb(245, 195, 130);
+  transition: all 0.5s;
+}
+
+.welcome {
+  text-align: center;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(39, 41, 37),
+    rgb(131, 148, 34)
+  );
+  width: 30%;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
+  padding: 25px;
+  transform: translateY(-165%);
+  visibility: visible;
+  transition: visibility 0.3s;
+  border-radius: 40px;
+}
+
+.numOfQues {
+  background-color: rgb(245, 204, 150);
+  padding: 15px 15px 15px 20px;
+  font-size: 20px;
+  margin-left: 150px;
+  margin-top: 4px;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  width: 15%;
+  height: 10%;
+  text-align: center;
+  outline: none;
+}
+
+.numOfQues::placeholder {
+  opacity: 0.4;
+}
+
+.neme {
+  font-size: 25px;
+}
+
+.roller,
+.roller:active,
+.roller:visited {
+  width: 15%;
+  height: 10%;
+  font-size: 30px;
+  background-color: brown;
+  color: white;
   border: none;
   cursor: pointer;
-  padding: 15px;
-  font-size: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+.roller:hover {
+  background-color: red;
+}
+
+.decrease {
+  transform: translateX(-240%);
+}
+
+.increase {
+  transform: translateX(-110%);
 }
